--- a/index.html
+++ b/index.html
@@ -57,11 +57,7 @@
                 </a></div>
             <div class="div-block-2">
                 <div class="div-block-3 w-clearfix">
-                    <div class="footer-text right">Designed by</div><img
-                        src="https://uploads-ssl.webflow.com/62c9410d707bc511741c98b6/62ca6a44f5513c601898b056_white-logo-code-to-moon.png"
-                        loading="lazy"
-                        srcset="https://uploads-ssl.webflow.com/62c9410d707bc511741c98b6/62ca6a44f5513c601898b056_white-logo-code-to-moon-p-500.png 500w, https://uploads-ssl.webflow.com/62c9410d707bc511741c98b6/62ca6a44f5513c601898b056_white-logo-code-to-moon-p-800.png 800w, https://uploads-ssl.webflow.com/62c9410d707bc511741c98b6/62ca6a44f5513c601898b056_white-logo-code-to-moon-p-1080.png 1080w, https://uploads-ssl.webflow.com/62c9410d707bc511741c98b6/62ca6a44f5513c601898b056_white-logo-code-to-moon-p-1600.png 1600w, https://uploads-ssl.webflow.com/62c9410d707bc511741c98b6/62ca6a44f5513c601898b056_white-logo-code-to-moon.png 1881w"
-                        sizes="(max-width: 479px) 100vw, 120px" alt="Logo codeToMoon" class="logo" />
+                    <div class="footer-text right">Designed by Jatinder</div>
                 </div>
             </div>
         </div>
