--- a/index.html
+++ b/index.html
@@ -37,22 +37,22 @@
             <div class="div-scoial-media-wrapper"><a data-w-id="9c41a182-1a32-ce02-76c6-680b183c252f"
                     href="https://www.facebook.com/codeT0Moon" target="_blank" class="links w-inline-block">
                     <div class="div-icon-wrapper"><img
-                            src="https://uploads-ssl.webflow.com/62c9410d707bc511741c98b6/62c9460b9749a0716e802e44_facebook.png"
+                            src="./images/icons8-facebook-50.png"
                             alt="facebook-icon" class="icons" /></div>
                 </a><a data-w-id="9c41a182-1a32-ce02-76c6-680b183c2535" href="https://twitter.com/codetomoon"
                     target="_blank" class="links w-inline-block">
                     <div class="div-icon-wrapper"><img
-                            src="https://uploads-ssl.webflow.com/62c9410d707bc511741c98b6/62c9460b9749a05a5b802e48_twitter.png"
+                            src="./images/icons8-twitter-50.png"
                             alt="twitter-icon" class="icons" /></div>
                 </a><a data-w-id="25da4a66-35de-cf84-d7c2-9f1e269fb1d6"
                     href="https://www.linkedin.com/company/codetomoon" target="_blank" class="links w-inline-block">
                     <div class="div-icon-wrapper"><img
-                            src="https://uploads-ssl.webflow.com/62c9410d707bc511741c98b6/62c9460b9749a07e0f802e46_linked.png"
+                            src="./images/icons8-linkedin-50.png"
                             alt="Link-icon" class="icons" /></div>
                 </a><a data-w-id="e9c79d81-add6-a020-bc22-2d34bb82d8c0" href="mailto:contact@codetomoon.com?subject=Hi"
                     class="links w-inline-block">
                     <div class="div-icon-wrapper"><img
-                            src="https://uploads-ssl.webflow.com/62c9410d707bc511741c98b6/62c94ab3c504961169ab3fdf_icons8-mail-24.png"
+                            src="./images/icons8-email-50.png"
                             alt="Email-icon" class="icons" /></div>
                 </a></div>
             <div class="div-block-2">
